wk_taa_taaqa/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMS Maintenance</fullName>
                </value>
                <value>
                    <fullName>AMS Training</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>CHICAGOBOOK</fullName>
                </value>
                <value>
                    <fullName>CHICAGO LRNCNTR</fullName>
                </value>
                <value>
                    <fullName>CHICAGO SEMINAR</fullName>
                </value>
                <value>
                    <fullName>EBOOKS</fullName>
                </value>
                <value>
                    <fullName>FEDERAL TAX</fullName>
                </value>
                <value>
                    <fullName>FINESTPLAN</fullName>
                </value>
                <value>
                    <fullName>LCG</fullName>
                </value>
                <value>
                    <fullName>LLL</fullName>
                </value>
                <value>
                    <fullName>SALES TAX GROUP</fullName>
                </value>
                <value>
                    <fullName>SPEEDTAX</fullName>
                </value>
                <value>
                    <fullName>STATE TAX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricebook_Name_Text__c</fullName>
        <formula>Price_book__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook Name (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_18_Character_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product 18 Character ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Benefit__c</fullName>
        <label>Product Benefit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Defines the product line for Wolters TAA portfolio</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ERP__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Corporate Indirect Software (STG)</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Family__c</fullName>
        <label>Product Sub Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting &amp; Audit Internet</fullName>
                </value>
                <value>
                    <fullName>Accounting Research Manager</fullName>
                </value>
                <value>
                    <fullName>Active Data</fullName>
                </value>
                <value>
                    <fullName>Active Data for Business</fullName>
                </value>
                <value>
                    <fullName>Affordable Care Act</fullName>
                </value>
                <value>
                    <fullName>ATX 1040</fullName>
                </value>
                <value>
                    <fullName>ATX 1040 Office</fullName>
                </value>
                <value>
                    <fullName>ATX 1040 Office PS</fullName>
                </value>
                <value>
                    <fullName>ATX 1040 PS</fullName>
                </value>
                <value>
                    <fullName>ATX Additional Efin</fullName>
                </value>
                <value>
                    <fullName>ATX Advantage</fullName>
                </value>
                <value>
                    <fullName>ATX Advantage PS</fullName>
                </value>
                <value>
                    <fullName>ATX CCH Master Tax Guide Online</fullName>
                </value>
                <value>
                    <fullName>ATX CCH Primary Research Sources</fullName>
                </value>
                <value>
                    <fullName>ATX CDROM</fullName>
                </value>
                <value>
                    <fullName>ATX Client Checkbook</fullName>
                </value>
                <value>
                    <fullName>ATX Fixed Asset Manager</fullName>
                </value>
                <value>
                    <fullName>ATX Fixed Asset Manager User Guide</fullName>
                </value>
                <value>
                    <fullName>ATX Live Payroll</fullName>
                </value>
                <value>
                    <fullName>ATX Max</fullName>
                </value>
                <value>
                    <fullName>ATX Max PS</fullName>
                </value>
                <value>
                    <fullName>ATX Ohio Cities</fullName>
                </value>
                <value>
                    <fullName>ATX Pay Per Return</fullName>
                </value>
                <value>
                    <fullName>ATX Pay-Per-Return</fullName>
                </value>
                <value>
                    <fullName>ATX Payroll</fullName>
                </value>
                <value>
                    <fullName>ATX Payroll User Guide</fullName>
                </value>
                <value>
                    <fullName>ATX Per Return Package</fullName>
                </value>
                <value>
                    <fullName>ATX Prior Year Max</fullName>
                </value>
                <value>
                    <fullName>ATX Referral Commission</fullName>
                </value>
                <value>
                    <fullName>ATX Return Retrieval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Implementation Services</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Non-Subscription</fullName>
                </value>
                <value>
                    <fullName>Other Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_year__c</fullName>
        <label>Product year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q2_Contest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identify 800+ Products for Q2-2016 Sales Contest</description>
        <label>Q2 Contest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_L_eLearning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>R&amp;L eLearning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Non Sub</fullName>
                </value>
                <value>
                    <fullName>Sub</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Intellectual_Property_Number__c</fullName>
        <label>SAP Intellectual Property Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_HIDDEN__c</fullName>
        <description>Original Auto number was changed to Text and never reverted back to Auto Number. Tat field have been integrated into several pieces of code which will take hours to correct,. This field will be used to populate the auto number and update SFDC Product # field that is used in the integration.</description>
        <displayFormat>{0000000000}</displayFormat>
        <label>SFDC Product # (HIDDEN)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Product_Length__c</fullName>
        <formula>LEN( SFDC_Product__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Product # Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Product__c</fullName>
        <label>SFDC Product #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFS_Product_ID__c</fullName>
        <label>SFS Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STG_Renewal_Percentage__c</fullName>
        <label>STG Renewal Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SaaS_Product_ID__c</fullName>
        <label>SaaS Product ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Terms_2__c</fullName>
        <label>Sales Terms 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suppress_From_Order_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suppress From Order Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suppress_Quote_Totals__c</fullName>
        <description>Used to suppress quote totals on the shopping cart. Don&apos;t use for anything else.</description>
        <label>Suppress Quote Totals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAA_18_digit_Product_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAA 18-digit Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamMate_Analytics_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teammate Analytics Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_RTF__c</fullName>
        <label>Test RTF</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visible_to_UserRole__c</fullName>
        <label>Visible to UserRole</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Everybody</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>TAA Sales Executives</fullName>
                </value>
                <value>
                    <fullName>DSM - Corporate Direct</fullName>
                </value>
                <value>
                    <fullName>Vice President - R&amp;L Sales</fullName>
                </value>
                <value>
                    <fullName>STG Overall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WK_Product_Status__c</fullName>
        <description>Stores the Wolters Product status</description>
        <label>WK Product Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Renewal Product Only</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Stopped</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Returns Only</fullName>
                </value>
                <value>
                    <fullName>Stop Delivery</fullName>
                </value>
                <value>
                    <fullName>Not Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_2nd_Media__c</fullName>
        <label>15 2nd Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Training Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_Media_Format__c</fullName>
        <label>15 Media Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X15_Media_Type__c</fullName>
        <label>15 Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2ND_PORT_Parent3__c</fullName>
        <label>2ND PORT/Parent3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting &amp; Audit</fullName>
                </value>
                <value>
                    <fullName>Accounting &amp; Audit for Tax Professionals</fullName>
                </value>
                <value>
                    <fullName>ADDRESS VALIDATION</fullName>
                </value>
                <value>
                    <fullName>Almanac Bus Ind Financial Ratios</fullName>
                </value>
                <value>
                    <fullName>BULK HOURS</fullName>
                </value>
                <value>
                    <fullName>Certificate Programs</fullName>
                </value>
                <value>
                    <fullName>CONSULTING</fullName>
                </value>
                <value>
                    <fullName>Copyright Clearance Center</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>CUSTOM OFFERS</fullName>
                </value>
                <value>
                    <fullName>DATABASE\LOOKUP</fullName>
                </value>
                <value>
                    <fullName>ebooks</fullName>
                </value>
                <value>
                    <fullName>Federal Add-On</fullName>
                </value>
                <value>
                    <fullName>Federal Estate and Gift Taxes-Code/ Regs</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>FIT of Debt Instruments</fullName>
                </value>
                <value>
                    <fullName>Freight</fullName>
                </value>
                <value>
                    <fullName>GAAP Guide and Handbook</fullName>
                </value>
                <value>
                    <fullName>Guidebooks</fullName>
                </value>
                <value>
                    <fullName>Income Tax Regs</fullName>
                </value>
                <value>
                    <fullName>Internal Revenue Code</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Journals and Newsletters</fullName>
                </value>
                <value>
                    <fullName>Key Facts and Figures</fullName>
                </value>
                <value>
                    <fullName>Large Corps</fullName>
                </value>
                <value>
                    <fullName>Learning Center Single Courses</fullName>
                </value>
                <value>
                    <fullName>Learning Center Subscription</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Lexis</fullName>
                </value>
                <value>
                    <fullName>Loose-Leaf - Financial Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Media__c</fullName>
        <label>2nd Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Content Access</fullName>
                </value>
                <value>
                    <fullName>Digital product related Training</fullName>
                </value>
                <value>
                    <fullName>e-books</fullName>
                </value>
                <value>
                    <fullName>e-learning</fullName>
                </value>
                <value>
                    <fullName>Implementation Fees</fullName>
                </value>
                <value>
                    <fullName>Journals / Newsletters / Magazines</fullName>
                </value>
                <value>
                    <fullName>License fees</fullName>
                </value>
                <value>
                    <fullName>Loose-leafs</fullName>
                </value>
                <value>
                    <fullName>Maintenance fees</fullName>
                </value>
                <value>
                    <fullName>SaaS</fullName>
                </value>
                <value>
                    <fullName>Tax Transactional</fullName>
                </value>
                <value>
                    <fullName>Other Services</fullName>
                </value>
                <value>
                    <fullName>Other Software/Workflow Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zero_Opportunity_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zero Opportunity Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iFirm_Monthly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in workflow to calculate correct value for iFirm Monthly Subscriptions</description>
        <label>iFirm Monthly</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Apttus_Config2__ConfigurationType__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Price__c</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products_created_TODAY</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_18_Character_ID__c</columns>
        <columns>SFS_Product_ID__c</columns>
        <columns>SFDC_Product__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Products created TODAY</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>